--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/register_bg"
-    tools:context="cn.edu.gdme.android.boxuegu.activity.RegisterActivity">
+    tools:context="cn.edu.gdme.android.boxuegu.activity.LoginActivity">
     <include layout="@layout/main_title_bar"/>
     <ImageView
         android:layout_marginTop="25dp"
@@ -47,25 +47,10 @@
         android:textColorHint="#a3a3a3"
         android:textColor="#000000"
         android:textSize="14sp"/>
-    <EditText
 
-        android:id="@+id/tv_pwd_again"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/register_psw_again_bg"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:drawableLeft="@drawable/user_name_icon"
-        android:paddingLeft="8dp"
-        android:drawablePadding="10dp"
-        android:hint="请再次输入密码"
-        android:gravity="center_vertical"
-        android:textColorHint="#a3a3a3"
-        android:textColor="#000000"
-        android:textSize="14sp"/>
     <Button
         android:id="@+id/btn_register"
-        android:text="注册"
+        android:text="登录"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="35dp"
@@ -75,4 +60,28 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:background="@drawable/register_selector"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+        <TextView
+            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            android:text="立即注册"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            android:text="找回密码"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
 </LinearLayout>
