--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:background="@drawable/default_icon"/>
     <EditText
-        android:id="@+id/tv_username"
+        android:id="@+id/et_username"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_user_name_bg"
@@ -33,7 +33,7 @@
     <EditText
 
 
-        android:id="@+id/tv_pwd"
+        android:id="@+id/et_pwd"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_psw_bg"
@@ -49,7 +49,7 @@
         android:textSize="14sp"/>
 
     <Button
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_login"
         android:text="登录"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
@@ -69,6 +69,10 @@
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
         <TextView
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:id="@+id/tv_register"
             android:gravity="center_horizontal"
             android:layout_weight="1"
             android:text="立即注册"
@@ -76,6 +80,10 @@
             android:layout_height="wrap_content"
             />
         <TextView
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:id="@+id/tv_find_pwd"
             android:gravity="center_horizontal"
             android:layout_weight="1"
             android:text="找回密码"
