--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:background="@drawable/default_icon"/>
     <EditText
-        android:id="@+id/tv_username"
+        android:id="@+id/tv_user_name"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_user_name_bg"
@@ -31,8 +31,6 @@
         android:textColor="#000000"
         android:textSize="14sp"/>
     <EditText
-
-
         android:id="@+id/tv_pwd"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
@@ -48,7 +46,6 @@
         android:textColor="#000000"
         android:textSize="14sp"/>
     <EditText
-
         android:id="@+id/tv_pwd_again"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
