--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:background="@drawable/default_icon"/>
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_user_name"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_user_name_bg"
