--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:background="@drawable/default_icon"/>
     <EditText
-        android:id="@+id/tv_user_name"
+        android:id="@+id/et_user_name"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_user_name_bg"
@@ -31,7 +31,7 @@
         android:textColor="#000000"
         android:textSize="14sp"/>
     <EditText
-        android:id="@+id/tv_pwd"
+        android:id="@+id/et_pwd"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_psw_bg"
