--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:background="@drawable/default_icon"/>
     <EditText
         android:id="@+id/et_user_name"
+        android:inputType="text"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_user_name_bg"
@@ -31,9 +32,8 @@
         android:textColor="#000000"
         android:textSize="14sp"/>
     <EditText
-
-
         android:id="@+id/et_pwd"
+        android:inputType="textPassword"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_psw_bg"
