--- a/app/src/main/res/layout/main_view_info.xml
+++ b/app/src/main/res/layout/main_view_info.xml
@@ -21,7 +21,7 @@
             android:src="@drawable/default_icon" />
 
         <TextView
-            android:id="@+id/iv_user_name"
+            android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
