个人资料修改2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                 android:layout_marginBottom="3dp"
                 android:gravity="center"
                 android:inputType="text"
-                android:text="课程"
+                android:text="我"
                 android:textColor="#666666"
                 android:textSize="14sp"/>
             <ImageView
