--- a/app/src/main/res/layout/exercises_list_item.xml
+++ b/app/src/main/res/layout/exercises_list_item.xml
@@ -7,7 +7,7 @@
     android:paddingRight="10dp"
     android:paddingTop="15dp"
     android:background="@android:color/white"
-    android:layout_height="wrap_parent">
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="40dp"
