--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,65 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/register_bg"
+    android:background="@drawable/login_bg"
     tools:context="cn.edu.gdmec.android.boxuegu.activity.LoginActivity">
-    <include layout="@layout/main_title_bar"/>
+
+    <include layout="@layout/main_title_bar"></include>
+
     <ImageView
+        android:id="@+id/iv_head"
         android:layout_marginTop="25dp"
         android:layout_gravity="center_horizontal"
+        android:background="@drawable/default_icon"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/default_icon"/>
+        android:layout_height="70dp" />
+
     <EditText
-        android:id="@+id/et_user_name"
-        android:inputType="text"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/register_user_name_bg"
-        android:layout_marginTop="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:drawableLeft="@drawable/user_name_icon"
-        android:paddingLeft="8dp"
-        android:drawablePadding="10dp"
+        android:textSize="14sp"
+        android:textColorHint="#a3a3a3"
+        android:textColor="#000000"
+        android:singleLine="true"
         android:hint="请输入用户名"
-        android:gravity="center_vertical"
-        android:textColorHint="#a3a3a3"
-        android:textColor="#000000"
-        android:textSize="14sp"/>
-    <EditText
-        android:id="@+id/et_pwd"
-        android:inputType="textPassword"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/register_psw_bg"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:drawableLeft="@drawable/user_name_icon"
         android:paddingLeft="8dp"
         android:drawablePadding="10dp"
-        android:hint="请输入密码"
-        android:gravity="center_vertical"
+        android:drawableLeft="@drawable/user_name_icon"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/et_user_name"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:background="@drawable/login_user_name_bg"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp" />
+
+    <EditText
+        android:textSize="14sp"
         android:textColorHint="#a3a3a3"
         android:textColor="#000000"
-        android:textSize="14sp"/>
+        android:singleLine="true"
+        android:hint="请输入密码"
+        android:paddingLeft="8dp"
+        android:drawablePadding="10dp"
+        android:drawableLeft="@drawable/psw_icon"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/et_psw"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:background="@drawable/login_psw_bg"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp" />
 
     <Button
         android:id="@+id/btn_login"
-        android:text="登录"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:text="登 录"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:background="@drawable/register_selector"
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/register_selector"/>
+        android:layout_height="40dp" ></Button>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -68,28 +76,27 @@
         android:layout_marginRight="35dp"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
-        <TextView
-            android:padding="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:id="@+id/tv_register"
-            android:gravity="center_horizontal"
-            android:layout_weight="1"
-            android:text="立即注册"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            />
-        <TextView
-            android:padding="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:id="@+id/tv_find_pwd"
-            android:gravity="center_horizontal"
-            android:layout_weight="1"
-            android:text="找回密码"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            />
 
+        <TextView
+            android:id="@+id/tv_register"
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:gravity="center_horizontal"
+            android:text="立即注册"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_find_psw"
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:gravity="center_horizontal"
+            android:text="找回密码"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
