--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/activity_register"
+    android:background="@drawable/register_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/register_bg"
     tools:context="cn.edu.gdmec.android.boxuegu.activity.RegisterActivity">
-    <include layout="@layout/main_title_bar"/>
+
+    <include layout="@layout/main_title_bar"></include>
+
     <ImageView
         android:layout_marginTop="25dp"
         android:layout_gravity="center_horizontal"
+        android:src="@drawable/default_icon"
         android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/default_icon"/>
+        android:layout_height="70dp" />
+
     <EditText
+        android:singleLine="true"
         android:id="@+id/et_user_name"
-        android:inputType="text"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_user_name_bg"
@@ -31,9 +35,9 @@
         android:textColorHint="#a3a3a3"
         android:textColor="#000000"
         android:textSize="14sp"/>
+
     <EditText
         android:id="@+id/et_pwd"
-        android:inputType="textPassword"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_psw_bg"
@@ -43,13 +47,14 @@
         android:paddingLeft="8dp"
         android:drawablePadding="10dp"
         android:hint="请输入密码"
+        android:singleLine="true"
         android:gravity="center_vertical"
         android:textColorHint="#a3a3a3"
         android:textColor="#000000"
         android:textSize="14sp"/>
+
     <EditText
-        android:id="@+id/tv_pwd_again"
-        android:inputType="textPassword"
+        android:id="@+id/et_pwd_again"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:background="@drawable/register_psw_again_bg"
@@ -59,13 +64,15 @@
         android:paddingLeft="8dp"
         android:drawablePadding="10dp"
         android:hint="请再次输入密码"
+        android:singleLine="true"
         android:gravity="center_vertical"
         android:textColorHint="#a3a3a3"
         android:textColor="#000000"
         android:textSize="14sp"/>
+
     <Button
+        android:text="注 册"
         android:id="@+id/btn_register"
-        android:text="注册"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="35dp"
