--- a/app/src/main/res/layout/exercises_list_item.xml
+++ b/app/src/main/res/layout/exercises_list_item.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:paddingBottom="15dp"
+    android:background="@android:color/white"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:paddingBottom="15dp"
     android:paddingTop="15dp"
-    android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
         android:id="@+id/tv_order"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/exercises_bg_1"
-        android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:background="@drawable/exercises_bg_1" />
+
     <LinearLayout
+        android:layout_marginLeft="15dp"
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginLeft="15sp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_height="fill_parent">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_title"
-            android:inputType="text"
-            android:text="第一章Android基础入门"
-            android:textColor="#000"
-            android:textSize="14sp"/>
-        <TextView
+            android:singleLine="true"
+            android:text="第一章 Android基础入门"
+            android:textColor="#000000"
+            android:textSize="14sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
             android:id="@+id/tv_content"
             android:layout_marginTop="2dp"
             android:text="共计5题"
-            android:inputType="text"
+            android:singleLine="true"
+            android:textColor="#a3a3a3"
             android:textSize="12sp"
-            android:textColor="#a3a3a3"/>
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
